# xv6-riscv-image-video-player

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
kernel/: bio.c  buddy.c  common.h  defs.h  exec.c  file.c  fs.c  fs.h  ioapic.c  kalloc.c  log.c  main.c  memlayout.h  palette.h  param.h  pci.c  picirq.c  plic.c  printf.c  proc.c  proc.h  riscv.h  sound.c  sound.h  spinlock.c  start.c  sysaudio.c  syscall.c  syscall.h  sysfile.c  sysproc.c  trap.c  uart.c  vga.c  vga.h  virtio.h  virtio_disk.c  vm.c
mkfs/: mkfs  mkfs.c
user/: ball.c  brot.c  common.c  count.c  cp.c  decode.c  decode.h  decodemp3.c  editor.c  font.h  hello.c  init.c  load.c  math.c  mp3dec.c  mv.c  mysh.c  parsemp4.c  play.c  playmp3.c  playmp4.c  playwav.c  pwd.c  ren.c  shell_sh.c  top.c  touch.c  uptime.c  user.h  usys.pl  viewer.c
